--- a/Frontend/la-duquesa-ecommerce/index.html
+++ b/Frontend/la-duquesa-ecommerce/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./src/img/logo.png  " />
+    <link rel="icon" type="image/svg+xml" href="./src/img/LogoIcono.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>La duquesa</title>
   </head>
